# kws-hash-optimizer

./: .gitignore  ChangeLog  Makefile.am  NEWS  configure.ac  deps.ac
doc/: Doxyfile.extra.in  footer.html
doc/additionalDoc/: doc.hh
include/: Makefile.am
include/kws/: kws-bezier-optimizer.hh  kws-hash-optimizer.hh
include/kws/bezier-optimizer/: fwd.hh  io.hh  optimizer.hh
include/kws/hash-optimizer/: directpath.hh  distance.hh  elliptic-directpath.hh  elliptic-steeringmethod.hh  fwd.hh  io.hh  optimizer.hh  steeringmethod.hh
src/: Makefile.am  directpath.cc  distance.cc  elliptic-directpath.cc  elliptic-steeringmethod.cc  optimizer.cc  steeringmethod.cc
tests/: Makefile.am  common.hh  simple-test.at  simple-test.cc  testsuite.at
