include $(top_srcdir)/build-aux/init.mk

# -- Distribute and install headers
nobase_include_HEADERS =				\
		kws/kws-hash-optimizer.hh	\
		kws/hash-optimizer/fwd.hh		\
		kws/hash-optimizer/io.hh		\
		kws/hash-optimizer/optimizer.hh		\
		kws/hash-optimizer/directpath.hh	\
		kws/hash-optimizer/steeringmethod.hh	\
		kws/hash-optimizer/distance.hh		\
		kws/hash-optimizer/elliptic-directpath.hh	\
		kws/hash-optimizer/elliptic-steeringmethod.hh

